# pyfcode

./: .gitignore  pyproject.toml
lib/pyfcode/: pyproject.toml
lib/pyfcode/fcode/: __init__.py
